Add some space above content on title page

--- a/main.tex
+++ b/main.tex
@@ -6,8 +6,9 @@
 \begin{document}
 
 \begin{titlepage}
+  \null\vspace{2em}
+  \setcounter{page}{0}
   \begin{center}
-    \vspace{\stretch{1}}
     \includegraphics[width=8em]{ouroboros} \\
     \vspace{3em}
     {\LARGE Injectable Estradiol Guide \\}
