Add empty pages and sort out odd/even arrangement

--- a/main.tex
+++ b/main.tex
@@ -14,18 +14,22 @@
     \vspace{2em}
     {\large CCC Transgender Resources \\}
     \vspace{0.6em}
-    {\large v0.3.1-en \\}
+    {\large v0.3.2-en \\}
     \vspace{\stretch{2}}
   \end{center}
 \end{titlepage}
 
+\setcounter{page}{1}
 \pagenumbering{roman}
+\clearpage
+\hfill
+\clearpage
+
 \tableofcontents
 \listoftables
 \listoffigures
 
 \newpage
-\setcounter{page}{1}
 \pagenumbering{arabic}
 
 \noindent The following information is provided in the hope that it
@@ -318,5 +322,9 @@ opening of the needle tip facing upwards, then as the needle is
 inserted slowly increase the angle to 90\textdegree.  This can be done
 the first time the vial is used and for subsequent uses, and works
 with sharp and blunt needles.
+
+\clearpage
+\hfill
+\clearpage
 
 \end{document}
