Fix booklet layout

--- a/booklet.tex
+++ b/booklet.tex
@@ -1,10 +1,9 @@
-\documentclass[a4paper]{article}
+\documentclass[a4paper,landscape]{article}
 
 \usepackage{pdfpages}
 
 \begin{document}
 
-\includepdf[pages={{},1}, nup=1x2, landscape]{main}
-\includepdf[pages=2-, nup=1x2, landscape]{main}
+\includepdf[pages=-,booklet]{main}
 
 \end{document}
