--- a/main.tex
+++ b/main.tex
@@ -15,7 +15,7 @@
     \vspace{2em}
     {\large CCC Transgender Resources \\}
     \vspace{0.6em}
-    {\large v0.3.2-en \\}
+    {\large v0.3.3 \\}
     \vspace{\stretch{2}}
   \end{center}
 \end{titlepage}
