Fix some spelling errors

--- a/main.tex
+++ b/main.tex
@@ -43,7 +43,7 @@ professional if this is possible -- though of course it often is not,
 hence why we are doing this in the first place.
 
 With that in mind, if any information in this booklet is found to be
-innaccurate or outdated, or if you have some additional information
+inaccurate or outdated, or if you have some additional information
 you think should be included, please let us know so that we can update
 it and inform others.  Solidarity!
 
@@ -51,7 +51,7 @@ it and inform others.  Solidarity!
 
 Hormone therapy for transfeminine people generally has two aims: to
 suppress the body's production of testosterone and to increase
-oestrogen levels.  This is commonly achieved with two seperate
+oestrogen levels.  This is commonly achieved with two separate
 medications: an anti-androgen to suppress testosterone and some form
 of oestrogen to increase oestrogen levels.  However, administration of
 just oestrogen can achieve both of these as estradiol suppresses
@@ -59,7 +59,7 @@ testosterone production when at suitably high doses -- this is called
 estradiol monotherapy.  As we are able to supply estradiol, but not
 any anti-androgens, this is the route we recommend for those seeking
 feminising effects.  It also avoids the additional side effects and
-seperate risk profile of an anti-androgen medication.
+separate risk profile of an anti-androgen medication.
 
 In order for monotherapy to be effective, a higher dose of estradiol
 is required than is typically administered for combination therapy
@@ -166,7 +166,7 @@ to an NHS GP, they will often do the tests as a harm reduction measure
 if informed that you are self-medicating.  Otherwise, hormone level,
 LF and FBC tests are available for free by appointment with CliniQ in
 their clinic in South London, though of course this requires
-travelling to London.  There are also DIY kits available from many
+traveling to London.  There are also DIY kits available from many
 different sources online, though these are generally very expensive
 and can be unreliable.
 
@@ -201,7 +201,7 @@ injecting into the buttocks you should do this too.
 
 Ideally, injection should be done in a warm environment as this will
 help to relax the muscle.  Before doing the injection, sterilise any
-work surfaces you will be using, thouroughly wash your hands and
+work surfaces you will be using, thoroughly wash your hands and
 assemble all the equipment you will need:
 
 \begin{itemize}
@@ -214,7 +214,7 @@ assemble all the equipment you will need:
 \item Sterile cotton pad or swab to catch any bleeding
 \item Plaster to apply to the injection site afterwards if needed
 \item Contaminated sharps bin (this can be any rigid plastic container
-  that is clearly labelled).
+  that is clearly labeled).
 \end{itemize}
 
 \textbf{Never reuse a needle or syringe}.  Needle exchange services
@@ -308,7 +308,7 @@ stored upright.
 The vials we provide are intended to last for many uses, so there is a
 risk of \textit{vial coring} where small pieces of the vial's rubber
 stopper break off into the vial.  From there they can be drawn up into
-a syringe and injected -- this is not neccessarily dangerous but
+a syringe and injected -- this is not necessarily dangerous but
 probably best avoided.  Coring can also lead to a hole forming in the
 stopper that is large enough for air, dust and other contaminants to
 enter the vial, or for fluid to leak out when the vial is not upright.
