--- a/main.tex
+++ b/main.tex
@@ -324,8 +324,19 @@ inserted slowly increase the angle to 90\textdegree.  This can be done
 the first time the vial is used and for subsequent uses, and works
 with sharp and blunt needles.
 
-\clearpage
-\hfill
-\clearpage
+\cleardoublepage
+
+\pagestyle{empty}
+\begin{center}
+  \null\vfill
+  \includegraphics[width=10em]{repo-qr} \\
+  \vspace{1.2em}
+  \parbox{0.8\textwidth}{
+    The latest version of this
+    guide, as well as its issue tracker and source code are available
+    on the git repository page.
+  }
+  \vfill
+\end{center}
 
 \end{document}
