Use just 'CCC' as author

--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@
     \vspace{3em}
     {\LARGE Injectable Estradiol Guide \\}
     \vspace{2em}
-    {\large CCC Transgender Resources \\}
+    {\large CCC \\}
     \vspace{0.6em}
     {\large v0.3.3 \\}
     \vspace{\stretch{2}}
