Remove part of vial coring section
Whether or not reusing the hole helps is unclear so removed references
to this.

--- a/main.tex
+++ b/main.tex
@@ -313,16 +313,11 @@ probably best avoided.  Coring can also lead to a hole forming in the
 stopper that is large enough for air, dust and other contaminants to
 enter the vial, or for fluid to leak out when the vial is not upright.
 
-In order to reduce these risks, after puncturing the stopper of a new
-vial you can try to use the same hole for subsequent injections.  A
-blunt drawing-up needle can also be used instead of a sharp one --
-again, only after the stopper has been punctured the first time.
-Finally, the 45 -- 90\textdegree\ puncture technique can be used when
-drawing up: insert the needle at a 45 -- 60\textdegree\ angle with the
-opening of the needle tip facing upwards, then as the needle is
-inserted slowly increase the angle to 90\textdegree.  This can be done
-the first time the vial is used and for subsequent uses, and works
-with sharp and blunt needles.
+In order to reduce these risks, the 45 -- 90\textdegree\ puncture
+technique can be used when drawing up: insert the needle at a 45 --
+60\textdegree\ angle with the opening of the needle tip facing
+upwards, then as the needle is inserted slowly increase the angle to
+90\textdegree.
 
 \cleardoublepage
 
