Revise recommended starting dose

--- a/main.tex
+++ b/main.tex
@@ -82,11 +82,11 @@ in cisgender women of 50-250 pg/mL.
 Dosage depends on the target serum estradiol level, which is different
 depending on whether an anti-androgen is being taken along with the
 oestrogen.  For a target level of 300 pg/mL, appropriate for estradiol
-monotherapy, a recommended starting dose is 5.0 mg of estradiol
-enanthate (EEn), which is \textbf{0.1 mL of the provided 50 mg/mL oil,
-  every 7 days}.  If an anti-androgen is also being taken along with
-the estradiol, this can be reduced to the same amount every 10 days,
-with a lower target level of around 200 pg/mL.
+monotherapy, a recommended starting dose is 5.5 mg of estradiol
+enanthate (EEn), which is \textbf{0.11 mL of the provided 50 mg/mL
+  oil, every 7 days}.  If an anti-androgen is also being taken along
+with the estradiol, this can be reduced to \textbf{0.07 ml} every 7
+days, with a lower target level of around 200 pg/mL.
 
 To determine an approximate dose for a different target level to those
 above or for more or less frequent injections, \textit{Transfeminine
