Make text on back smaller

--- a/main.tex
+++ b/main.tex
@@ -327,9 +327,9 @@ upwards, then as the needle is inserted slowly increase the angle to
   \includegraphics[width=10em]{repo-qr} \\
   \vspace{1.2em}
   \parbox{0.8\textwidth}{
-    The latest version of this
-    guide, as well as its issue tracker and source code are available
-    on the git repository page.
+    \small
+    The latest version of this guide, as well as its issue tracker and
+    source code are available on the git repository page.
   }
   \vfill
 \end{center}
