Add license info

--- a/main.tex
+++ b/main.tex
@@ -15,17 +15,28 @@
     \vspace{2em}
     {\large CCC \\}
     \vspace{0.6em}
-    {\large v0.4.0 \\}
+    {\large v0.4.1 \\}
     \vspace{\stretch{2}}
   \end{center}
 \end{titlepage}
 
 \setcounter{page}{1}
 \pagenumbering{roman}
-\clearpage
-\hfill
-\clearpage
 
+\begin{center}
+  \null\vfill
+  \includegraphics[width=10em]{license-qr} \\
+  \vspace{1.2em}
+  \parbox{0.8\textwidth}{
+    \small
+    Copyright \textcopyright\ 2024 Cybernetic Communist Collective,
+    published under Creative Commons Attribution-NonCommercial 4.0
+    International.
+  }
+  \vfill
+\end{center}
+
+\newpage
 \tableofcontents
 \listoftables
 \listoffigures
