Place tables and figures closer to related content

--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,8 @@
 
 \begin{document}
 
+\newcommand{\qrwidth}{6em}
+
 \begin{titlepage}
   \null\vspace{2em}
   \setcounter{page}{0}
@@ -15,7 +17,7 @@
     \vspace{2em}
     {\large CCC \\}
     \vspace{0.6em}
-    {\large v0.4.1 \\}
+    {\large v0.4.2 \\}
     \vspace{\stretch{2}}
   \end{center}
 \end{titlepage}
@@ -25,7 +27,7 @@
 
 \begin{center}
   \null\vfill
-  \includegraphics[width=10em]{license-qr} \\
+  \includegraphics[width=\qrwidth]{license-qr} \\
   \vspace{1.2em}
   \parbox{0.8\textwidth}{
     \small
@@ -83,13 +85,6 @@ in cisgender women of 50-250 pg/mL.
 
 \section{Recommended Starting Dosage}
 
-\begin{figure}
-  \centering
-  \includegraphics[width=10em]{simulator-qr}
-  \caption{Transfeminine Science's injectable estradiol simulator}
-  \label{fig:simulator-qr}
-\end{figure}
-
 Dosage depends on the target serum estradiol level, which is different
 depending on whether an anti-androgen is being taken along with the
 oestrogen.  For a target level of 300 pg/mL, appropriate for estradiol
@@ -103,7 +98,14 @@ To determine an approximate dose for a different target level to those
 above or for more or less frequent injections, \textit{Transfeminine
   Science} has an extremely useful tool which simulates serum
 estradiol levels for different doses and intervals of injection for
-different estradiol esters.
+different estradiol esters -- see figure~\ref{fig:simulator-qr}.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\qrwidth]{simulator-qr}
+  \caption{Transfeminine Science's injectable estradiol simulator}
+  \label{fig:simulator-qr}
+\end{figure}
 
 It is important to note that these doses are based off averages and
 will not be accurate for everyone.  The only definite way to get the
@@ -135,6 +137,19 @@ screening due to this increase in risk.
 
 \section{Blood Tests \& Monitoring}
 
+Where possible, people on hormone therapy should have blood tests
+every three months after starting treatment, then every six months for
+the following two years.  After this, testing only needs to be done
+once a year.  Tests should ideally include serum estradiol, serum
+testosterone, sex-hormone-binding globulin (SHBG), prolactin and
+dihydrotestosterone (DHT) as well as liver function (LF) and a full
+blood count (FBC).  Of these, estradiol and testosterone are the most
+essential to track, though testing liver function is important for
+people with an increased risk of developing liver problems, including
+those with a high alcohol intake.  Bloods should ideally be taken
+shortly before your next dose.  Table~\ref{tab:blood-ranges} lists
+reference ranges for these tests (where applicable).
+
 \begin{table}
   \centering
   \begin{tabular}{ll}
@@ -153,33 +168,21 @@ screening due to this increase in risk.
   \label{tab:blood-ranges}
 \end{table}
 
-\begin{figure}
-  \centering
-  \includegraphics[width=10em]{cliniq-qr}
-  \caption{CliniQ's page for their South London clinic}
-  \label{fig:cliniq-qr}
-\end{figure}
-
-Where possible, people on hormone therapy should have blood tests
-every three months after starting treatment, then every six months for
-the following two years.  After this, testing only needs to be done
-once a year.  Tests should ideally include serum estradiol, serum
-testosterone, sex-hormone-binding globulin (SHBG), prolactin and
-dihydrotestosterone (DHT) as well as liver function (LF) and a full
-blood count (FBC).  Of these, estradiol and testosterone are the most
-essential to track, though testing liver function is important for
-people with an increased risk of developing liver problems, including
-those with a high alcohol intake.  Bloods should ideally be taken
-shortly before your next dose.
-
 Blood tests can be difficult to access, though for people with access
 to an NHS GP, they will often do the tests as a harm reduction measure
 if informed that you are self-medicating.  Otherwise, hormone level,
 LF and FBC tests are available for free by appointment with CliniQ in
-their clinic in South London, though of course this requires
-traveling to London.  There are also DIY kits available from many
-different sources online, though these are generally very expensive
-and can be unreliable.
+their clinic in South London (see figure~\ref{fig:cliniq-qr}), though
+of course this requires traveling to London.  There are also DIY kits
+available from many different sources online, though these are
+generally very expensive and can be unreliable.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\qrwidth]{cliniq-qr}
+  \caption{CliniQ's page for their South London clinic}
+  \label{fig:cliniq-qr}
+\end{figure}
 
 Hormone therapy without doing any blood work is much higher risk,
 especially for those who already have increased baseline risk of liver
@@ -229,11 +232,19 @@ assemble all the equipment you will need:
 \end{itemize}
 
 \textbf{Never reuse a needle or syringe}.  Needle exchange services
-are available in many towns and provide injecting supplies for free.
-These are also available online and are cheap if bought in bulk.  If
-you are temporarily unable to access any new equipment, it is better
-for you to have a dose late or miss it entirely than risk infection
-and injury from reusing equipment.
+are available in many towns and provide injecting supplies for free --
+see figure~\ref{fig:needle-exchange-qr} for a page to search for one.
+Supplies are also available online and are generally cheap, especially
+if bought in bulk.  If you are temporarily unable to access any new
+equipment, it is better for you to have a dose late or miss it
+entirely than risk infection and injury from reusing equipment.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\qrwidth]{needle-exchange-qr}
+  \caption{Page for finding a needle exchange}
+  \label{fig:needle-exchange-qr}
+\end{figure}
 
 The procedure for administering the injection is detailed in
 section~\ref{subsec:injection-procedure}.  Especially for people new
@@ -245,16 +256,9 @@ also linked in figure~\ref{fig:im-injection-videos}.
 
 \begin{figure}
   \centering
-  \includegraphics[width=10em]{needle-exchange-qr}
-  \caption{Page for finding a needle exchange}
-  \label{fig:needle-exchange-qr}
-\end{figure}
-
-\begin{figure}
-  \centering
-  \includegraphics[width=10em]{drawing-up-video-qr}
+  \includegraphics[width=\qrwidth]{drawing-up-video-qr}
   \hspace{2em}
-  \includegraphics[width=10em]{im-injection-video-qr}
+  \includegraphics[width=\qrwidth]{im-injection-video-qr}
   \caption{Video guides for self-administering hormone injections}
   \label{fig:im-injection-videos}
 \end{figure}
@@ -335,7 +339,7 @@ upwards, then as the needle is inserted slowly increase the angle to
 \pagestyle{empty}
 \begin{center}
   \null\vfill
-  \includegraphics[width=10em]{repo-qr} \\
+  \includegraphics[width=\qrwidth]{repo-qr} \\
   \vspace{1.2em}
   \parbox{0.8\textwidth}{
     \small
