Make a few small tweaks to phrasing

--- a/main.tex
+++ b/main.tex
@@ -17,7 +17,7 @@
     \vspace{2em}
     {\large CCC \\}
     \vspace{0.6em}
-    {\large v0.4.2 \\}
+    {\large v0.4.3 \\}
     \vspace{\stretch{2}}
   \end{center}
 \end{titlepage}
@@ -91,8 +91,8 @@ oestrogen.  For a target level of 300 pg/mL, appropriate for estradiol
 monotherapy, a recommended starting dose is 5.5 mg of estradiol
 enanthate (EEn), which is \textbf{0.11 mL of the provided 50 mg/mL
   oil, every 7 days}.  If an anti-androgen is also being taken along
-with the estradiol, this can be reduced to \textbf{0.07 ml} every 7
-days, with a lower target level of around 200 pg/mL.
+with the estradiol, this can be reduced to \textbf{0.07 ml every 7
+  days}, with a lower target level of around 200 pg/mL.
 
 To determine an approximate dose for a different target level to those
 above or for more or less frequent injections, \textit{Transfeminine
@@ -133,7 +133,7 @@ than it is for breast tissue developed due to endogenously produced
 oestrogens but should still be considered, especially for those with a
 history of breast cancer in their biological family.  It is
 recommended that people taking oestrogen sign up for breast cancer
-screening due to this increase in risk.
+screening where possible due to this increase in risk.
 
 \section{Blood Tests \& Monitoring}
 
@@ -200,8 +200,8 @@ concern.
 The EEn oil we provide should be administered as an intramuscular (IM)
 injection.  This means the medication goes into muscle tissue, as
 opposed to into fat, a blood vessel or under the skin.  IM injections
-are extremely low risk if the appropriate steps are taken to mitigate
-infection risk and a suitable injection site is used.
+are extremely low risk as long as the appropriate steps are taken to
+mitigate infection risk and a suitable injection site is used.
 
 The two recommended injection sites are in the vastus lateralis muscle
 in the thigh and the gluteus maximus muscle in the buttocks.  The
@@ -285,9 +285,9 @@ also linked in figure~\ref{fig:im-injection-videos}.
 \item Slowly pull back on the plunger to fill the syringe until the
   required volume is reached.
 \item Check for air bubbles in the syringe. Remove them if there are
-  any by flicking the side of the syringe and pressing the plunger
-  down again to push them into the vial.  Afterwards, draw the plunger
-  back to the required volume.
+  any by flicking the side of the syringe and pressing the plunger in
+  again to push them into the vial.  Afterwards, draw the plunger back
+  to the required volume.
 \item Pull the needle out of the vial, then remove it from the syringe
   and place it in the sharps bin
 \item Remove the injecting needle from its packaging and attach it to
@@ -310,13 +310,13 @@ also linked in figure~\ref{fig:im-injection-videos}.
 \section{Storage \& Longevity Considerations}
 
 EEn is UV-sensitive, so constant light exposure (especially sunlight)
-will degrade it over time, so vials should ideally be stored somewhere
-dark.  Opaque plastic canisters to keep the vials in when not in use
-are available for this purpose.  Heat can also degrade the compound
-over time so it should be stored away from any source of heat like a
-radiator or cooker.  The rubber stopper may also degrade over time if
-in constant contact with the contents, so vials should always be
-stored upright.
+will degrade it over time.  Vials should therefore be stored somewhere
+dark; opaque plastic containers to keep the vials in when not in use
+are available for this purpose.  Heat can also shorten the lifespan of
+the medication so it should be stored away from any source of heat
+like a radiator or cooker.  Additionally, vials should always be
+stored upright to avoid the rubber in the stopper perishing from
+constant contact with the contents.
 
 \subsection{Vial Coring}
 
