Make captions smaller

--- a/main.tex
+++ b/main.tex
@@ -103,7 +103,7 @@ different estradiol esters -- see figure~\ref{fig:simulator-qr}.
 \begin{figure}
   \centering
   \includegraphics[width=\qrwidth]{simulator-qr}
-  \caption{Transfeminine Science's injectable estradiol simulator}
+  \caption{\small Transfeminine Science's injectable estradiol simulator}
   \label{fig:simulator-qr}
 \end{figure}
 
@@ -164,7 +164,7 @@ reference ranges for these tests (where applicable).
     DHT & $< 10$ ng/dL \\
     \bottomrule
   \end{tabular}
-  \caption{Reference ranges for blood tests}
+  \caption{\small Reference ranges for blood tests}
   \label{tab:blood-ranges}
 \end{table}
 
@@ -180,7 +180,7 @@ generally very expensive and can be unreliable.
 \begin{figure}
   \centering
   \includegraphics[width=\qrwidth]{cliniq-qr}
-  \caption{CliniQ's page for their South London clinic}
+  \caption{\small CliniQ's page for their South London clinic}
   \label{fig:cliniq-qr}
 \end{figure}
 
@@ -242,7 +242,7 @@ entirely than risk infection and injury from reusing equipment.
 \begin{figure}
   \centering
   \includegraphics[width=\qrwidth]{needle-exchange-qr}
-  \caption{Page for finding a needle exchange}
+  \caption{\small Page for finding a needle exchange}
   \label{fig:needle-exchange-qr}
 \end{figure}
 
@@ -259,7 +259,7 @@ also linked in figure~\ref{fig:im-injection-videos}.
   \includegraphics[width=\qrwidth]{drawing-up-video-qr}
   \hspace{2em}
   \includegraphics[width=\qrwidth]{im-injection-video-qr}
-  \caption{Video guides for self-administering hormone injections}
+  \caption{\small Video guides for self-administering hormone injections}
   \label{fig:im-injection-videos}
 \end{figure}
 
